force-app/main/default/objects/Forecast_Stage_Changed__e/Forecast_Stage_Changed__e.object-meta.xml
<CustomObject>
    <label>Forecast Stage Changed</label>
    <pluralLabel>Forecast Stage Changed Events</pluralLabel>
</CustomObject>