force-app/main/default/objects/Forecast_Stage_Changed__e/fields/Changed_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Changed_By_Id__c</fullName>
    <label>Changed By Id</label>
    <type>Text</type>
    <length>18</length>
    <description>UserInfo.getUserId() at the time of the change.</description>
</CustomField>