force-app/main/default/objects/Forecast_Stage_Changed__e/fields/New_Stage__c.field-meta.xml
<CustomField>
    <fullName>New_Stage__c</fullName>
    <label>New Stage</label>
    <type>Text</type>
    <length>20</length>
    <required>true</required>
</CustomField>