force-app/main/default/objects/Forecast_Stage_Changed__e/fields/Old_Stage__c.field-meta.xml
<CustomField>
    <fullName>Old_Stage__c</fullName>
    <label>Old Stage</label>
    <type>Text</type>
    <length>20</length>
</CustomField>