force-app/main/default/objects/Forecast_Stage_Changed__e/fields/Projection_Id__c.field-meta.xml
<CustomField>
    <fullName>Projection_Id__c</fullName>
    <label>Projection Id</label>
    <type>Text</type>
    <length>18</length>
    <required>true</required>
    <description>Id of the Projection__c whose Forecast Stage changed.</description>
</CustomField>